test/corpus/feature_definition.txt
===========================================================
Feature declaration with text cannot stand without scenario
:error
===========================================================

Feature: I am a test feature for basic text

---

(source_file
    (feature_definition
        (identifier)))

=============================================================
Feature declaration without text canot stand without scenario
:error
=============================================================

Feature:

---

(source_file
    (feature_definition
        (feature_name
            identifier)))
